Fix slide height on mobile for portfolio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1554,7 +1554,7 @@ body {
   overflow: hidden;
 }
 .carousel .active-slide {
-  height: 480px;
+  height: 500px;
   background-color: #151515;
   transition: height 0.6s ease;
 }
