--- a/assets/css/modules/_slider.sass
+++ b/assets/css/modules/_slider.sass
@@ -17,7 +17,7 @@
         overflow: hidden
 
     .active-slide
-        height: 480px
+        height: 500px
         background-color: #151515
         transition: height 0.6s ease
 
